syntax = "proto3";

package api.pointsmall.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/pointsmall/v1;pointsmallv1";

service PointsmallService {
  // Product Management
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);

  // Order Management
  rpc ExchangeProduct(ExchangeProductRequest) returns (ExchangeProductResponse);
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);

  // Account Management
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  rpc AddPoints(AddPointsRequest) returns (google.protobuf.Empty);
}

message PointsProduct {
  uint64 id = 1;
  string name = 2;
  string description = 3;
  string image_url = 4;
  int64 points = 5;
  int32 stock = 6;
  int32 sold_count = 7;
  int32 limit_per_user = 8;
  int32 status = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

message PointsOrder {
  uint64 id = 1;
  string order_no = 2;
  uint64 user_id = 3;
  uint64 product_id = 4;
  string product_name = 5;
  int32 quantity = 6;
  int64 points = 7;
  int64 total_points = 8;
  int32 status = 9;
  string address = 10;
  string phone = 11;
  string receiver = 12;
  google.protobuf.Timestamp shipped_at = 13;
  google.protobuf.Timestamp completed_at = 14;
  google.protobuf.Timestamp created_at = 15;
  google.protobuf.Timestamp updated_at = 16;
}

message PointsAccount {
  uint64 id = 1;
  uint64 user_id = 2;
  int64 total_points = 3;
  int64 used_points = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  string image_url = 3;
  int64 points = 4;
  int32 stock = 5;
  int32 limit_per_user = 6;
  int32 status = 7;
}

message CreateProductResponse {
  PointsProduct product = 1;
}

message ListProductsRequest {
  int32 status = 1; // 0: Offline, 1: Online, -1: All
  int32 page = 2;
  int32 page_size = 3;
}

message ListProductsResponse {
  repeated PointsProduct products = 1;
  int64 total_count = 2;
}

message ExchangeProductRequest {
  uint64 user_id = 1;
  uint64 product_id = 2;
  int32 quantity = 3;
  string address = 4;
  string phone = 5;
  string receiver = 6;
}

message ExchangeProductResponse {
  PointsOrder order = 1;
}

message ListOrdersRequest {
  uint64 user_id = 1;
  int32 status = 2; // -1: All
  int32 page = 3;
  int32 page_size = 4;
}

message ListOrdersResponse {
  repeated PointsOrder orders = 1;
  int64 total_count = 2;
}

message GetAccountRequest {
  uint64 user_id = 1;
}

message GetAccountResponse {
  PointsAccount account = 1;
}

message AddPointsRequest {
  uint64 user_id = 1;
  int64 points = 2;
  string description = 3;
  string ref_id = 4;
}
